--- a/index.html
+++ b/index.html
@@ -5106,7 +5106,7 @@
                 <span class='error-message email-error' ></span>
              <textarea id="message" name="_message" placeholder="Message" onkeyup='validateMessage(this);' required></textarea>
                 <span class='error-message message-error' ></span>
-             <input type="text"  id="captcha" name="_captcha" placeholder="1 + 1 = ?" required>
+             <input type="text"  id="captcha" name="_captcha" placeholder="-7 + 12 - 3 = ?" required>
              <div class="red-button" onclick="sendMail(this);">Send message</div>
              <span class='error-message submit-error'></span>
 
@@ -5167,7 +5167,7 @@
             Act. In this respect, Altcoinomy is affiliated to a Self-Regulatory Organisation, namely VQF (“Verein zur
                 Qualitätssicherung von Finanzdienstleistungen”).</p>
             <br/>
-            <p>Last Update: 2019-09-24</p>
+            <p>Last Update: 2019-12-03</p>
             <br/>
             <p style="color: #ea4e4e; margin-bottom: 30px;">If you do not own your private keys, you do not own your bitcoins.</p>
         </div>
