--- a/index.html
+++ b/index.html
@@ -5093,14 +5093,14 @@
                     <div style="text-align:center;margin-top:-1.5em;"><img width=150 src="images/team_Afsaneh-200x267.jpg"></div>
                     <div class="dash"></div>
                     <div class="team__members__member__name">Afsaneh Heyat</div>
-                    <div class="team__members__member__role">Head of ICO onboarding</div>
+                    <div class="team__members__member__role">Chief Product Officer</div>
                     <a data-member="Afsaneh" class="red-button-filled" href="#">Read more</a>
                 </div>
                 <div class="team__members__member">
                     <div style="text-align:center;margin-top:-1.5em;"><img width=150 src="images/team_Adi-200x267.jpg"></div>
                     <div class="dash"></div>
                     <div class="team__members__member__name">Adi Somech</div>
-                    <div class="team__members__member__role">Head of Flow Business</div>
+                    <div class="team__members__member__role">Head of Flow</div>
                     <a data-member="Adi" class="red-button-filled" href="#">Read more</a>
                 </div>
                 <div class="team__members__member">
@@ -5210,7 +5210,7 @@
             Act. In this respect, Altcoinomy is affiliated to a Self-Regulatory Organisation, namely VQF (“Verein zur
                 Qualitätssicherung von Finanzdienstleistungen”).</p>
             <br/>
-            <p>Last Update: 2021-01-13</p>
+            <p>Last Update: 2021-02-09</p>
             <br/>
             <p style="color: #ea4e4e; margin-bottom: 30px;">If you do not own your private keys, you do not own your bitcoins.</p>
         </div>
