Add new happy customer

--- a/index.html
+++ b/index.html
@@ -1967,9 +1967,15 @@
                 <div class="subtitle project_title"><a href="https://chintai.io">Chintai</a></div>
                 <div class="partners__partner__image__logo__chintai"></div>
             </div>
+            <!--
             <div class="partners__partner__image position_relative">
                 <div class="subtitle project_title"><a href="https://stakehound.com/">StakeHound</a></div>
                 <div class="partners__partner__image__logo__stakehound"></div>
+            </div>
+            -->
+            <div class="partners__partner__image position_relative">
+                <div class="subtitle project_title"><a href="https://olyseum.com/">Olyseum</a></div>
+                <div class="partners__partner__image__logo__olyseum"></div>
             </div>
             <div class="partners__partner__image position_relative">
                 <div class="subtitle project_title"><a href="https://www.colu.com">Colu</a></div>
